--- a/JSF_HelloWorld/src/main/webapp/moon.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/moon.xhtml
@@ -8,26 +8,9 @@
 <body>
 <h:form>
     <h:outputLabel for="name">Name:</h:outputLabel>
-    <h:inputText id="name" value="#{galaxyBean.name}" required="true" />
+    <h:inputText id="name" value="#{moonBean.name}" required="true" />
 
-    <h:outputLabel for="type">Type:</h:outputLabel>
-    <h:selectOneMenu id="type" value="#{galaxyBean.type}" required="true">
-        <f:selectItem itemValue="ELLIPTICAL" itemLabel="Elliptical" />
-        <f:selectItem itemValue="LENTICULAR" itemLabel="Lenticular" />
-        <f:selectItem itemValue="SPIRAL" itemLabel="Spiral" />
-        <f:selectItem itemValue="IRREGULAR" itemLabel="Irregular" />
-    </h:selectOneMenu>
-
-    <h:outputLabel for="age">Age:</h:outputLabel>
-    <h:inputText id="age" value="#{galaxyBean.age}" required="true" />
-
-    <h:outputLabel for="ageUnit">AgeUnit:</h:outputLabel>
-    <h:selectOneMenu id="ageUnit" value="#{galaxyBean.ageUnit}" required="true">
-        <f:selectItem itemValue="BILLIONS" itemLabel="Billions" />
-        <f:selectItem itemValue="MILLIONS" itemLabel="Millions" />
-    </h:selectOneMenu>
-
-    <h:commandButton value="Register" action="#{galaxyBean.registerGalaxy}" />
+    <h:commandButton value="Register" action="#{moonBean.registerMoon()}" />
 
     <!-- Add more components or messages for user interaction -->
 
