--- a/JSF_HelloWorld/src/main/webapp/galaxy.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/galaxy.xhtml
@@ -3,12 +3,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <head>
-    <title>User Registration</title>
+    <title>Moon Registration</title>
 </head>
 <body>
 <h:form>
-    <h:outputLabel for="username">Username:</h:outputLabel>
-    <h:inputText id="username" value="#{galaxyBean.name}" required="true" />
+    <h:outputLabel for="name">Name:</h:outputLabel>
+    <h:inputText id="name" value="#{galaxyBean.name}" required="true" />
     <br/>
 
     <h:outputLabel for="galaxyType">GalaxyType:</h:outputLabel>
