--- a/JSF_HelloWorld/src/main/webapp/star.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/star.xhtml
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Star Registration</title>
 </head>
 <body>
+<h:form>
+    <h:outputLabel for="name">Name:</h:outputLabel>
+    <h:inputText id="name" value="#{starBean.name}" required="true" />
+    <br/>
 
+    <h:outputLabel for="starClass">StarClass:</h:outputLabel>
+    <h:inputText id="starClass" value="#{starBean.starClass}" required="true" />
+    <br/>
+
+    <h:outputLabel for="mass">Mass:</h:outputLabel>
+    <h:inputSecret id="mass" value="#{starBean.mass}" required="true" />
+    <br/>
+
+    <h:outputLabel for="size">Size:</h:outputLabel>
+    <h:inputSecret id="size" value="#{starBean.size}" required="true" />
+
+    <h:outputLabel for="temperature">Temperature:</h:outputLabel>
+    <h:inputSecret id="temperature" value="#{starBean.temperature}" required="true" />
+
+    <h:outputLabel for="compatibility">Compatibility:</h:outputLabel>
+    <h:inputSecret id="compatibility" value="#{starBean.compatibility}" required="true" />
+    <br/>
+    <h:commandButton value="Register" action="#{starBean.registerStar()}" />
+</h:form>
 </body>
 </html>
