added logic for PlanetBean

--- a/JSF_HelloWorld/src/main/webapp/helloworld.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/helloworld.xhtml
@@ -6,7 +6,7 @@
         <title>Hello World JSF Example</title>
     </h:head>
     <h:body>
-       #{welcome.s1}
+       #{helloWorld.s1}
         <br /> <br />
         
        
