--- a/JSF_HelloWorld/src/main/webapp/moon.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/moon.xhtml
@@ -11,6 +11,7 @@
     <h:inputText id="name" value="#{moonBean.name}" required="true" />
 
     <h:commandButton value="Register" action="#{moonBean.registerMoon()}" />
+    <h:commandButton value="Statistics" action="#{moonBean.registeredMoonStatistics}" />
 
     <!-- Add more components or messages for user interaction -->
 
