--- a/JSF_HelloWorld/src/main/webapp/planet.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/planet.xhtml
@@ -21,6 +21,7 @@
 
     <br/>
     <h:commandButton value="Register" action="#{planetBean.registerPlanet()}" />
+    <h:commandButton value="Statistics" action="#{planetBean.registeredPlanetStatistics}" />
 </h:form>
 </body>
 </html>
