--- a/JSF_HelloWorld/src/main/webapp/star.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/star.xhtml
@@ -29,6 +29,7 @@
     <h:inputSecret id="compatibility" value="#{starBean.compatibility}" required="true" />
     <br/>
     <h:commandButton value="Register" action="#{starBean.registerStar()}" />
+    <h:commandButton value="Statistics" action="#{planetBean.registeredPlanetStatistics()}" />
 </h:form>
 </body>
 </html>
