added logic for statistic

--- a/JSF_HelloWorld/src/main/webapp/galaxy.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/galaxy.xhtml
@@ -29,6 +29,7 @@
         <p:commandButton id="loginButton" value="Register" action="#{galaxyBean.registerGalaxy()}"/>
         <h:commandButton value="Statistics" action="#{galaxyBean.registeredGalaxyStatistics()}" />
     </p:outputPanel>
+    <div></div>
 </h:form>
 </body>
 </html>
