--- a/JSF_HelloWorld/src/main/webapp/moon.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/moon.xhtml
@@ -14,7 +14,7 @@
     <h:commandButton value="Statistics" action="#{moonBean.registeredMoonStatistics}" />
 
     <!-- Add more components or messages for user interaction -->
-
+    <div></div>
 </h:form>
 </body>
 </html>
