--- a/JSF_HelloWorld/src/main/webapp/planet.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/planet.xhtml
@@ -22,6 +22,7 @@
     <br/>
     <h:commandButton value="Register" action="#{planetBean.registerPlanet()}" />
     <h:commandButton value="Statistics" action="#{planetBean.registeredPlanetStatistics}" />
+    <div></div>
 </h:form>
 </body>
 </html>
