--- a/JSF_HelloWorld/src/main/webapp/star.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/star.xhtml
@@ -30,6 +30,7 @@
     <br/>
     <h:commandButton value="Register" action="#{starBean.registerStar()}" />
     <h:commandButton value="Statistics" action="#{planetBean.registeredPlanetStatistics()}" />
+    <div></div>
 </h:form>
 </body>
 </html>
