added unit test for GalaxyBean

--- a/JSF_HelloWorld/src/main/webapp/galaxy.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/galaxy.xhtml
@@ -8,9 +8,10 @@
     <title>Galaxy Registration</title>
 </head>
 <body>
-<h:form id="form" prependId="false">
+<h:form id="form" prependId="false" >
+
     <p:outputPanel>
-        <p:inputText value="#{galaxyBean.name}" id="name" placeholder="Name"/>
+        <h:inputText value="#{galaxyBean.name}" id="name" placeholder="Name"/>
         <h:outputLabel for="name" placeholder="Password">Name</h:outputLabel>
         <br/>
 
@@ -29,7 +30,6 @@
         <p:commandButton id="loginButton" value="Register" action="#{galaxyBean.registerGalaxy()}"/>
         <h:commandButton value="Statistics" action="#{galaxyBean.registeredGalaxyStatistics()}" />
     </p:outputPanel>
-    <div></div>
 </h:form>
 </body>
 </html>
