added logic for search by name and type of object, both the server and the client (browser)

--- a/JSF_HelloWorld/src/main/webapp/galaxy.xhtml
+++ b/JSF_HelloWorld/src/main/webapp/galaxy.xhtml
@@ -11,7 +11,7 @@
 <h:form id="form" prependId="false" >
 
     <p:outputPanel>
-        <h:inputText value="#{galaxyBean.name}" id="name" placeholder="Name"/>
+        <h:inputText value="#{galaxyBean.name}" id="name" style="color: red;"/>
         <h:outputLabel for="name" placeholder="Password">Name</h:outputLabel>
         <br/>
 
